syntax = "proto3";

package greet;

message Greeting {
	string firstName = 1;
	string lastName = 2;
}

message GreetingRequest{
	Greeting greeting = 1;
}

message GreetingResponse{
	string result = 1;
}

message GreetingManyTimesRequest{
	Greeting greeting = 1;
}

message GreetingManyTimesResponse{
	string result = 1;
}

message GreetingLongRequest{
	Greeting greeting = 1;
}

message GreetingLongResponse{
	string result = 1;
}

service GreetingService{
	// unary
	rpc Greet (GreetingRequest) returns (GreetingResponse) {}

	// server stream
	rpc GreetManyTime (GreetingManyTimesRequest) returns (stream GreetingManyTimesResponse) {}

	// client stream
	rpc GreetLong (stream GreetingLongRequest) returns (GreetingLongResponse) {}
}